--- a/zadanie2/.classpath
+++ b/zadanie2/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Daria/Documents/rok III DW/VI semestr/moje repo sise/opencsv-3.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Daria/Documents/rok III DW/VI semestr/moje repo sise/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Patrycja/Uczelnia/SZTUCZNA_INTELIGENCJA_I_SYSTEMY_EKSPERTOWE/PROJEKT/Repo/SISE/zadanie2/opencsv-3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Patrycja/Uczelnia/SZTUCZNA_INTELIGENCJA_I_SYSTEMY_EKSPERTOWE/PROJEKT/Repo/SISE/zadanie2/guava-18.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
